// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Android BpkStarRating should render correctly 1`] = `
<View
  accessibilityLabel="3 out of 5 stars"
  accessible={true}
  style={
    Object {
      "flexDirection": "row",
    }
  }
>
  <withTheme(BpkStar)
    type="full"
  />
  <withTheme(BpkStar)
    type="full"
  />
  <withTheme(BpkStar)
    type="full"
  />
  <withTheme(BpkStar)
    type="empty"
  />
  <withTheme(BpkStar)
    type="empty"
  />
</View>
`;

exports[`Android BpkStarRating should render correctly with custom \`maxRating\` attribute 1`] = `
<View
  accessibilityLabel="3 out of 10 stars"
  accessible={true}
  style={
    Object {
      "flexDirection": "row",
    }
  }
>
  <withTheme(BpkStar)
    type="full"
  />
  <withTheme(BpkStar)
    type="full"
  />
  <withTheme(BpkStar)
    type="full"
  />
  <withTheme(BpkStar)
    type="empty"
  />
  <withTheme(BpkStar)
    type="empty"
  />
  <withTheme(BpkStar)
    type="empty"
  />
  <withTheme(BpkStar)
    type="empty"
  />
  <withTheme(BpkStar)
    type="empty"
  />
  <withTheme(BpkStar)
    type="empty"
  />
  <withTheme(BpkStar)
    type="empty"
  />
</View>
`;

exports[`Android BpkStarRating should render correctly with ratingLabel passed as a string 1`] = `
<View
  accessibilityLabel="Star rating"
  accessible={true}
  style={
    Object {
      "flexDirection": "row",
    }
  }
>
  <withTheme(BpkStar)
    type="full"
  />
  <withTheme(BpkStar)
    type="full"
  />
  <withTheme(BpkStar)
    type="full"
  />
  <withTheme(BpkStar)
    type="empty"
  />
  <withTheme(BpkStar)
    type="empty"
  />
  <withTheme(BpkStar)
    type="empty"
  />
  <withTheme(BpkStar)
    type="empty"
  />
  <withTheme(BpkStar)
    type="empty"
  />
  <withTheme(BpkStar)
    type="empty"
  />
  <withTheme(BpkStar)
    type="empty"
  />
</View>
`;

exports[`Android BpkStarRating should render correctly with stars rounded down 1`] = `
<View
  accessibilityLabel="3.3 out of 5 stars"
  accessible={true}
  style={
    Object {
      "flexDirection": "row",
    }
  }
>
  <withTheme(BpkStar)
    type="full"
  />
  <withTheme(BpkStar)
    type="full"
  />
  <withTheme(BpkStar)
    type="full"
  />
  <withTheme(BpkStar)
    type="empty"
  />
  <withTheme(BpkStar)
    type="empty"
  />
</View>
`;

exports[`Android BpkStarRating should render correctly with stars rounded down to half star 1`] = `
<View
  accessibilityLabel="3.7 out of 5 stars"
  accessible={true}
  style={
    Object {
      "flexDirection": "row",
    }
  }
>
  <withTheme(BpkStar)
    type="full"
  />
  <withTheme(BpkStar)
    type="full"
  />
  <withTheme(BpkStar)
    type="full"
  />
  <withTheme(BpkStar)
    type="half"
  />
  <withTheme(BpkStar)
    type="empty"
  />
</View>
`;
